--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -60,11 +60,14 @@
 
   <div class="modules-grid">
 
-    <!-- === Upload Related Tools === -->
-    <div class="module-item blue" data-page="uploads.html">
-      <i class="fa-solid fa-upload"></i>
-      Upload Exams
-    </div>
+<!-- === Upload Related Tools === -->
+<div id="upload-section"></div>  <!-- 🔥 anchor target -->
+
+<div class="module-item blue" data-page="uploads.html">
+  <i class="fa-solid fa-upload"></i>
+  Upload Exams
+</div>
+
 
     <div class="module-item teal" data-page="past_questions.html">
       <i class="fa-solid fa-file-lines"></i>
